Major product polish and performance improvements
✨ Product Polish (Last-mile):
- Updated class schema: separated 'door' and 'window' classes (5 classes total)
- Enhanced constraint messages with user-friendly Turkish feedback
- Added Draco mesh compression and KTX2/BasisU texture compression for glTF export
- Created comprehensive web previewer with Three.js
- Implemented advanced UV unwrapping and PBR material presets
- Updated layout solver for door/window separation

🚀 Performance & Operations:
- Added ONNX export and TensorRT support for model optimization
- Implemented comprehensive performance monitoring and telemetry
- Created intelligent caching system for masks, meshes, and textures
- Added advanced error handling with structured reporting
- Implemented quality validation and testing framework

🔧 Technical Improvements:
- Enhanced segmentation model for 5-class detection
- Improved layout solver with separate door/window processing
- Added material assignment system with architectural presets
- Implemented UV optimization and texture atlas management
- Created validation framework for geometry, segmentation, and layout

📊 Quality Assurance:
- Added comprehensive validation checks for 3D models
- Implemented performance metrics and error tracking
- Created quality reports with recommendations
- Added retry mechanisms and fallback strategies

🎨 User Experience:
- Beautiful web interface with real-time 3D preview
- Interactive parameter controls and export options
- User-friendly error messages and status updates
- Progress tracking and performance feedback

--- a/configs/training_config.yaml
+++ b/configs/training_config.yaml
@@ -3,15 +3,15 @@ model:
   architecture: deeplabv3plus
   encoder: mobilenetv3_large_100
   input_size: [256, 256]
-  num_classes: 4
-  classes: ["bg", "wall", "roof", "opening"]
+  num_classes: 5
+  classes: ["bg", "wall", "roof", "door", "window"]
   pretrained: true
   activation: softmax
 
 # Loss configuration
 loss:
   type: ce_dice
-  class_weights: [0.1, 0.4, 0.3, 0.2]  # bg, wall, roof, opening
+  class_weights: [0.1, 0.3, 0.2, 0.2, 0.2]  # bg, wall, roof, door, window
   label_smoothing: 0.05
   dice_weight: 0.5
   ce_weight: 0.5
